# svxlink-v1

./: .travis.yml  INSTALL.adoc  README.adoc
distributions/fedora/: svxlink.spec
distributions/fedora/etc/logrotate.d/: svxlink
distributions/fedora/etc/sysconfig/: svxlink
distributions/gentoo/etc/conf.d/: svxlink
distributions/gentoo/etc/logrotate.d/: svxlink
distributions/ubuntu/etc/default/: svxlink
distributions/ubuntu/etc/logrotate.d/: svxlink
docker/alpine/: Dockerfile.build
docker/debian-build/: Dockerfile  entrypoint.sh
docker/ubuntu-build/: Dockerfile
src/: CMakeLists.txt  versions
src/async/: CMakeLists.txt
src/async/demo/: CMakeLists.txt
src/doc/man/: CMakeLists.txt
src/svxlink/dtmf_plot/: dtmf_plot.cpp
src/svxlink/reflector/: svxreflector.conf
src/svxlink/scripts/: export_www.sh  logtime.pl
src/svxlink/svxlink/: CMakeLists.txt
src/svxlink/svxlink/contrib/: CMakeLists.txt
src/svxlink/svxlink/contrib/UsrpLogic/: CMakeLists.txt  README.adoc
src/svxlink/systemd/: remotetrx.default.in  svxlink.default.in  svxreflector.default.in
